--- a/index.html
+++ b/index.html
@@ -120,65 +120,65 @@
     <script src="scripts.js"></script>
     <section class="meals">
     	<h1 class="section-title section-title--mealse">browse by cuisines</h1>
-    	<ul class="meals__list"> <!-- 1 -->
-    		<li class="meals__item">
+    	<ul class="meals__list"> 
+    		<li id="meals__item__1" class="meals__item"> <!-- 1 -->
     			<div class="meals__countent">
 	    			<div class="meals__counter">327 recipes</div>
 	    			<h2 class="meals__title">italian</h2>
     			</div>
     		</li>
-    		<li class="meals__item"> <!-- 2 -->
+    		<li id="meals__item__2" class="meals__item"> <!-- 2 -->
     			<div class="meals__countent">
-	    			<div class="meals__counter">327 recipes</div>
-	    			<h2 class="meals__title">italian</h2>
+	    			<div class="meals__counter">156 recipes</div>
+	    			<h2 class="meals__title">indian</h2>
     			</div>
     		</li>
-    		<li class="meals__item"> <!-- 3 -->
+    		<li id="meals__item__3" class="meals__item"> <!-- 3 -->
     			<div class="meals__countent">
-	    			<div class="meals__counter">327 recipes</div>
-	    			<h2 class="meals__title">italian</h2>
+	    			<div class="meals__counter">270 recipes</div>
+	    			<h2 class="meals__title">french</h2>
     			</div>
     		</li>
-    		<li class="meals__item"> <!-- 4 -->
+    		<li id="meals__item__4" class="meals__item"> <!-- 4 -->
     			<div class="meals__countent">
-	    			<div class="meals__counter">327 recipes</div>
-	    			<h2 class="meals__title">italian</h2>
+	    			<div class="meals__counter">70 recipes</div>
+	    			<h2 class="meals__title">steakhouse</h2>
     			</div>
     		</li>
-    		<li class="meals__item"> <!-- 5 -->
+    		<li id="meals__item__5" class="meals__item"> <!-- 5 -->
     			<div class="meals__countent">
-	    			<div class="meals__counter">327 recipes</div>
-	    			<h2 class="meals__title">italian</h2>
+	    			<div class="meals__counter">326 recipes</div>
+	    			<h2 class="meals__title">seafood</h2>
     			</div>
     		</li>
-    	    <li class="meals__item"> <!-- 6 -->
+    	    <li id="meals__item__6" class="meals__item"> <!-- 6 -->
     			<div class="meals__countent">
-	    			<div class="meals__counter">327 recipes</div>
-	    			<h2 class="meals__title">italian</h2>
+	    			<div class="meals__counter">201 recipes</div>
+	    			<h2 class="meals__title">sushi</h2>
     			</div>
     		</li>
-    		<li class="meals__item"> <!-- 7 -->
+    		<li id="meals__item__7" class="meals__item"> <!-- 7 -->
     			<div class="meals__countent">
-	    			<div class="meals__counter">327 recipes</div>
-	    			<h2 class="meals__title">italian</h2>
+	    			<div class="meals__counter">240 recipes</div>
+	    			<h2 class="meals__title">mexican</h2>
     			</div>
     		</li>
-    		<li class="meals__item"> <!-- 8 -->
+    		<li id="meals__item__8" class="meals__item"> <!-- 8 -->
     			<div class="meals__countent">
-	    			<div class="meals__counter">327 recipes</div>
-	    			<h2 class="meals__title">italian</h2>
+	    			<div class="meals__counter">159 recipes</div>
+	    			<h2 class="meals__title">chinese</h2>
     			</div>
     		</li>
-    		<li class="meals__item"> <!-- 9 -->
+    		<li id="meals__item__9" class="meals__item"> <!-- 9 -->
     			<div class="meals__countent">
-	    			<div class="meals__counter">327 recipes</div>
-	    			<h2 class="meals__title">italian</h2>
+	    			<div class="meals__counter">94 recipes</div>
+	    			<h2 class="meals__title">pizza</h2>
     			</div>
     		</li>
-    		<li class="meals__item"> <!-- 10 -->
+    		<li id="meals__item__10" class="meals__item"> <!-- 10 -->
     			<div class="meals__countent">
-	    			<div class="meals__counter">327 recipes</div>
-	    			<h2 class="meals__title">italian</h2>
+	    			<div class="meals__counter">213 recipes</div>
+	    			<h2 class="meals__title">american</h2>
     			</div>
     		</li> 
     	</ul>
@@ -189,7 +189,7 @@
                 <p class="recipes-counter__description">Recipes Avilable</p>
             </li>
             <li class="recipes-counter__item">
-                <h3 class="recipes-counter__title">23,567</h3>
+                <h3 class="recipes-counter__title">431,729</h3>
                 <p class="recipes-counter__description">Recipes Avilable</p>
             </li>
             <li class="recipes-counter__item">
