--- a/index.html
+++ b/index.html
@@ -190,23 +190,19 @@
             </li>
             <li class="recipes-counter__item">
                 <h3 class="recipes-counter__title">431,729</h3>
-                <p class="recipes-counter__description">Recipes Avilable</p>
+                <p class="recipes-counter__description">Active Users</p>
             </li>
             <li class="recipes-counter__item">
-                <h3 class="recipes-counter__title">23,567</h3>
-                <p class="recipes-counter__description">Recipes Avilable</p>
+                <h3 class="recipes-counter__title">892,173</h3>
+                <p class="recipes-counter__description">Positive Reviews</p>
             </li>
             <li class="recipes-counter__item">
-                <h3 class="recipes-counter__title">23,567</h3>
-                <p class="recipes-counter__description">Recipes Avilable</p>
+                <h3 class="recipes-counter__title">56,581</h3>
+                <p class="recipes-counter__description">Photos & Videos</p>
             </li>
             <li class="recipes-counter__item">
-                <h3 class="recipes-counter__title">23,567</h3>
-                <p class="recipes-counter__description">Recipes Avilable</p>
-            </li>
-            <li class="recipes-counter__item">
-                <h3 class="recipes-counter__title">23,567</h3>
-                <p class="recipes-counter__description">Recipes Avilable</p>
+                <h3 class="recipes-counter__title">3,182</h3>
+                <p class="recipes-counter__description">Spices and Herbs</p>
             </li>
         </ui>
 
