--- a/index.html
+++ b/index.html
@@ -1,188 +1,195 @@
-	<!DOCTYPE html>
-<html lang="en" >
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Find your favorite recipes</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
-  <link rel="stylesheet" href="style.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Find your favorite recipes</title>
+    <link rel="stylesheet" href="animate.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header class="header">
-    	<a href="/" class="logo">
-    		<img src="images/logo.png" alt="logo" class="logo__img">
-    	</a>
-    	<nav class="menu" >
-    		<ul class="menu__list">
-    			<li class="menu__item">
-    				<a href="#" class="menu__link">log ins</a>
-    			</li>
-    			<li class="menu__item">
-    				<a href="#" class="menu__link">saing up</a>
-    			</li>
-    			<li class="menu__item">
+        <a href="/" class="logo">
+            <img src="images/logo.png" alt="logo" class="logo__img">
+        </a>
+        <nav class="menu">
+            <ul class="menu__list">
+                <li class="menu__item">
+                    <a href="#" class="menu__link">log ins</a>
+                </li>
+                <li class="menu__item">
+                    <a href="#" class="menu__link">saing up</a>
+                </li>
+                <li class="menu__item">
                     <label for="checkbox-button-menu">MENU</label>
                     <input id="checkbox-button-menu" type="checkbox" hidden />
-                    <ul class="button-menu" >
+                    <ul class="button-menu">
                         <li class="button-menu__item"><a href="#" class="button-menu__link">Find</a></li>
                         <li class="button-menu__item"><a href="#" class="button-menu__link">your</a></li>
                         <li class="button-menu__item"><a href="#" class="button-menu__link">favorite</a></li>
                     </ul>
-    			</li>
-    		</ul>
-    	</nav>
+                </li>
+            </ul>
+        </nav>
     </header> <!-- /.header-->
     <section class="main">
-    	<h1 class="main__title">Find your Favorite <span class="main__title-big">recipes</span></h1>
-    	<a href="#app" class="main__button">get started</a>
-    	<p class="main__description">or send us your own recipes and <a href="#">get rewarded</a>!</p>
-    </section> <!--/.main-->
-    <section class="featoures" > 
+        <h1 class="main__title wow fadeInUp">Find your Favorite <span class="main__title-big">recipes</span></h1>
+        <a href="#app" class="main__button wow fadeInUp">get started</a>
+        <p class="main__description ">or send us your own recipes and <a href="#">get rewarded</a>!</p>
+    </section>
+    <!--/.main-->
+    <section class="featoures">
         <ul class="featoures__list">
-            <li class="featoures__item featoures__item--burger">
+            <li class="featoures__item featoures__item--burger wow fadeInUp" data-wow-delay="0.1s">
                 <h3 class="section-title">get inspired</h3>
                 <p class="featoures__description"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+            </li>
+            <li class="featoures__item featoures__item--money wow fadeInUp" data-wow-delay="0.3s">
+                <h3 class="section-title">get rewarded</h3>
+                <p class="featoures__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </li>
+            <li class="featoures__item featoures__item--man wow fadeInUp" data-wow-delay="0.5s">
+                <h3 class="section-title">get social</h3>
+                <p class="featoures__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </li>
+        </ul>
+    </section> <!-- /. features -->
+    <section class="app" id="app">
+        <div class="app__image wow fadeInLeft" data-wow-delay="0.3s"></div>
+        <div class="app__content wow fadeInRight" data-wow-delay="0.3s">
+            <h1 class="section-title">introducing the fudi app</h1>
+            <p class="app__description"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
                 quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
                 consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
                 cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
                 proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
-            </li>
-            <li class="featoures__item featoures__item--money" >
-                <h3 class="section-title">get rewarded</h3>
-                <p class="featoures__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            <p class="app__description"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
                 quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
                 consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
                 cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            </li>
-            <li class="featoures__item featoures__item--man">
-                <h3 class="section-title">get social</h3>
-                <p class="featoures__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+            <p class="app__description"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
                 quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
                 consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
                 cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            </li>
-        </ul>
-    </section> <!-- /. features -->
-
-
-
-
-    <section class="app" id="app">
-        <div class="app__image"></div>
-        <div class="app__content">
-            <h1 class="section-title">introducing the fudi app</h1>
-            <p class="app__description"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-            proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
-            <p class="app__description"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-            proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
-            <p class="app__description"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-            proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
-            <p class="app__description"> 
+                proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+            <p class="app__description">
                 <a href="#" class="app__link app__link--appstore">app store</a>
                 <a href="#" class="app__link app__link--googleplay">google play</a>
             </p>
         </div> <!-- /.app__content -->
     </section> <!-- /. app -->
-
     <section class="review">
-    	<img src="images/avatar@2x.png" class="review__avatar">
-    	<p class="review__text">	
-    		I am so happy because I found this recipe, and it just made my life easer.
-    		<br>	
-    		Thanks so much for sharing!
-    	</p>
-    	<div class="review__autor">Mechael Dawson, San Francisco, CA</div>			
-
-        <nav class="review-control">	
-        	<span class="review-control__item review-control__item--active"> </span>
-        	<span class="review-control__item">	</span>
-        	<span class="review-control__item">	</span>
-        </nav>	<!-- /.review-control-->
-    </section>  <!-- /.review-->
+        <img src="images/avatar@2x.png" class="review__avatar">
+        <p class="review__text">
+            I am so happy because I found this recipe, and it just made my life easer.
+            <br>
+            Thanks so much for sharing!
+        </p>
+        <div class="review__autor">Mechael Dawson, San Francisco, CA</div>
+        <nav class="review-control">
+            <span class="review-control__item review-control__item--active"> </span>
+            <span class="review-control__item"> </span>
+            <span class="review-control__item"> </span>
+        </nav> <!-- /.review-control-->
+    </section> <!-- /.review-->
     <script src="scripts.js"></script>
     <section class="meals">
-    	<h1 class="section-title section-title--mealse">browse by cuisines</h1>
-    	<ul class="meals__list"> 
-    		<li id="meals__item__1" class="meals__item"> <!-- 1 -->
-    			<div class="meals__countent">
-	    			<div class="meals__counter">327 recipes</div>
-	    			<h2 class="meals__title">italian</h2>
-    			</div>
-    		</li>
-    		<li id="meals__item__2" class="meals__item"> <!-- 2 -->
-    			<div class="meals__countent">
-	    			<div class="meals__counter">156 recipes</div>
-	    			<h2 class="meals__title">indian</h2>
-    			</div>
-    		</li>
-    		<li id="meals__item__3" class="meals__item"> <!-- 3 -->
-    			<div class="meals__countent">
-	    			<div class="meals__counter">270 recipes</div>
-	    			<h2 class="meals__title">french</h2>
-    			</div>
-    		</li>
-    		<li id="meals__item__4" class="meals__item"> <!-- 4 -->
-    			<div class="meals__countent">
-	    			<div class="meals__counter">70 recipes</div>
-	    			<h2 class="meals__title">steakhouse</h2>
-    			</div>
-    		</li>
-    		<li id="meals__item__5" class="meals__item"> <!-- 5 -->
-    			<div class="meals__countent">
-	    			<div class="meals__counter">326 recipes</div>
-	    			<h2 class="meals__title">seafood</h2>
-    			</div>
-    		</li>
-    	    <li id="meals__item__6" class="meals__item"> <!-- 6 -->
-    			<div class="meals__countent">
-	    			<div class="meals__counter">201 recipes</div>
-	    			<h2 class="meals__title">sushi</h2>
-    			</div>
-    		</li>
-    		<li id="meals__item__7" class="meals__item"> <!-- 7 -->
-    			<div class="meals__countent">
-	    			<div class="meals__counter">240 recipes</div>
-	    			<h2 class="meals__title">mexican</h2>
-    			</div>
-    		</li>
-    		<li id="meals__item__8" class="meals__item"> <!-- 8 -->
-    			<div class="meals__countent">
-	    			<div class="meals__counter">159 recipes</div>
-	    			<h2 class="meals__title">chinese</h2>
-    			</div>
-    		</li>
-    		<li id="meals__item__9" class="meals__item"> <!-- 9 -->
-    			<div class="meals__countent">
-	    			<div class="meals__counter">94 recipes</div>
-	    			<h2 class="meals__title">pizza</h2>
-    			</div>
-    		</li>
-    		<li id="meals__item__10" class="meals__item"> <!-- 10 -->
-    			<div class="meals__countent">
-	    			<div class="meals__counter">213 recipes</div>
-	    			<h2 class="meals__title">american</h2>
-    			</div>
-    		</li> 
-    	</ul>
-
+        <h1 class="section-title section-title--mealse">browse by cuisines</h1>
+        <ul class="meals__list">
+            <li id="meals__item__1" class="meals__item">
+                <!-- 1 -->
+                <div class="meals__countent">
+                    <div class="meals__counter">327 recipes</div>
+                    <h2 class="meals__title">italian</h2>
+                </div>
+            </li>
+            <li id="meals__item__2" class="meals__item">
+                <!-- 2 -->
+                <div class="meals__countent">
+                    <div class="meals__counter">156 recipes</div>
+                    <h2 class="meals__title">indian</h2>
+                </div>
+            </li>
+            <li id="meals__item__3" class="meals__item">
+                <!-- 3 -->
+                <div class="meals__countent">
+                    <div class="meals__counter">270 recipes</div>
+                    <h2 class="meals__title">french</h2>
+                </div>
+            </li>
+            <li id="meals__item__4" class="meals__item">
+                <!-- 4 -->
+                <div class="meals__countent">
+                    <div class="meals__counter">70 recipes</div>
+                    <h2 class="meals__title">steakhouse</h2>
+                </div>
+            </li>
+            <li id="meals__item__5" class="meals__item">
+                <!-- 5 -->
+                <div class="meals__countent">
+                    <div class="meals__counter">326 recipes</div>
+                    <h2 class="meals__title">seafood</h2>
+                </div>
+            </li>
+            <li id="meals__item__6" class="meals__item">
+                <!-- 6 -->
+                <div class="meals__countent">
+                    <div class="meals__counter">201 recipes</div>
+                    <h2 class="meals__title">sushi</h2>
+                </div>
+            </li>
+            <li id="meals__item__7" class="meals__item">
+                <!-- 7 -->
+                <div class="meals__countent">
+                    <div class="meals__counter">240 recipes</div>
+                    <h2 class="meals__title">mexican</h2>
+                </div>
+            </li>
+            <li id="meals__item__8" class="meals__item">
+                <!-- 8 -->
+                <div class="meals__countent">
+                    <div class="meals__counter">159 recipes</div>
+                    <h2 class="meals__title">chinese</h2>
+                </div>
+            </li>
+            <li id="meals__item__9" class="meals__item">
+                <!-- 9 -->
+                <div class="meals__countent">
+                    <div class="meals__counter">94 recipes</div>
+                    <h2 class="meals__title">pizza</h2>
+                </div>
+            </li>
+            <li id="meals__item__10" class="meals__item">
+                <!-- 10 -->
+                <div class="meals__countent">
+                    <div class="meals__counter">213 recipes</div>
+                    <h2 class="meals__title">american</h2>
+                </div>
+            </li>
+        </ul>
         <ui class="recipes-counter">
             <li class="recipes-counter__item">
                 <h3 class="recipes-counter__title">23,567</h3>
@@ -205,14 +212,18 @@
                 <p class="recipes-counter__description">Spices and Herbs</p>
             </li>
         </ui>
-
     </section> <!-- /.maels -->
-
     <foter class="foter">
         <p class="foter__copyright">c2014 Fudi. All Rights Reservd.</p>
         <p class="foter__design">Design by:
             <a class="foter__link" href="//www.bekades.com">www.bekades.com</a>
         </p>
     </foter>
+    <script src="libs/jquery-3.4.1.min.js"></script>
+    <script src="libs/wow.min.js"></script>
+    <script>
+    new WOW().init();
+    </script>
 </body>
+
 </html>
