--- a/index.html
+++ b/index.html
@@ -119,70 +119,70 @@
     <section class="meals">
         <h1 class="section-title section-title--mealse">browse by cuisines</h1>
         <ul class="meals__list">
-            <li id="meals__item__1" class="meals__item">
+            <li id="meals__item__1" class="meals__item wow fadeInDown" data-wow-delay="0.3s">
                 <!-- 1 -->
                 <div class="meals__countent">
                     <div class="meals__counter">327 recipes</div>
                     <h2 class="meals__title">italian</h2>
                 </div>
             </li>
-            <li id="meals__item__2" class="meals__item">
+            <li id="meals__item__2" class="meals__item wow fadeInDown" data-wow-delay="0.3s">
                 <!-- 2 -->
                 <div class="meals__countent">
                     <div class="meals__counter">156 recipes</div>
                     <h2 class="meals__title">indian</h2>
                 </div>
             </li>
-            <li id="meals__item__3" class="meals__item">
+            <li id="meals__item__3" class="meals__item wow fadeInDown" data-wow-delay="0.3s">
                 <!-- 3 -->
                 <div class="meals__countent">
                     <div class="meals__counter">270 recipes</div>
                     <h2 class="meals__title">french</h2>
                 </div>
             </li>
-            <li id="meals__item__4" class="meals__item">
+            <li id="meals__item__4" class="meals__item wow fadeInDown" data-wow-delay="0.3s">
                 <!-- 4 -->
                 <div class="meals__countent">
                     <div class="meals__counter">70 recipes</div>
                     <h2 class="meals__title">steakhouse</h2>
                 </div>
             </li>
-            <li id="meals__item__5" class="meals__item">
+            <li id="meals__item__5" class="meals__item wow fadeInDown" data-wow-delay="0.3s">
                 <!-- 5 -->
                 <div class="meals__countent">
                     <div class="meals__counter">326 recipes</div>
                     <h2 class="meals__title">seafood</h2>
                 </div>
             </li>
-            <li id="meals__item__6" class="meals__item">
+            <li id="meals__item__6" class="meals__item wow fadeInUp" data-wow-delay="0.3s">
                 <!-- 6 -->
                 <div class="meals__countent">
                     <div class="meals__counter">201 recipes</div>
                     <h2 class="meals__title">sushi</h2>
                 </div>
             </li>
-            <li id="meals__item__7" class="meals__item">
+            <li id="meals__item__7" class="meals__item wow fadeInUp" data-wow-delay="0.3s">
                 <!-- 7 -->
                 <div class="meals__countent">
                     <div class="meals__counter">240 recipes</div>
                     <h2 class="meals__title">mexican</h2>
                 </div>
             </li>
-            <li id="meals__item__8" class="meals__item">
+            <li id="meals__item__8" class="meals__item wow fadeInUp" data-wow-delay="0.3s">
                 <!-- 8 -->
                 <div class="meals__countent">
                     <div class="meals__counter">159 recipes</div>
                     <h2 class="meals__title">chinese</h2>
                 </div>
             </li>
-            <li id="meals__item__9" class="meals__item">
+            <li id="meals__item__9" class="meals__item wow fadeInUp" data-wow-delay="0.3s">
                 <!-- 9 -->
                 <div class="meals__countent">
                     <div class="meals__counter">94 recipes</div>
                     <h2 class="meals__title">pizza</h2>
                 </div>
             </li>
-            <li id="meals__item__10" class="meals__item">
+            <li id="meals__item__10" class="meals__item wow fadeInUp" data-wow-delay="0.3s">
                 <!-- 10 -->
                 <div class="meals__countent">
                     <div class="meals__counter">213 recipes</div>
