add menu 1 commit

--- a/index.html
+++ b/index.html
@@ -25,12 +25,17 @@
                     <a href="#" class="menu__link">saing up</a>
                 </li>
                 <li class="menu__item">
-                    <label for="checkbox-button-menu">MENU</label>
-                    <input id="checkbox-button-menu" type="checkbox" hidden />
-                    <ul class="button-menu">
+                    <!-- <label for="checkbox-button-menu">MENU</label> -->
+                    <!-- <input id="checkbox-button-menu" type="checkbox" hidden /> -->
+                    <div class="touch-menu__item">
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                    </div>
+                    <ul class="button-menu_hidden">
                         <li class="button-menu__item"><a href="#" class="button-menu__link">Find</a></li>
-                        <li class="button-menu__item"><a href="#" class="button-menu__link">your</a></li>
-                        <li class="button-menu__item"><a href="#" class="button-menu__link">favorite</a></li>
+                        <li class="button-menu__item"><a href="#" class="button-menu__link">Your</a></li>
+                        <li class="button-menu__item"><a href="#" class="button-menu__link">Favorite</a></li>
                     </ul>
                 </li>
             </ul>
@@ -224,6 +229,7 @@
     <script>
     new WOW().init();
     </script>
+    <script type="text/javascript" src="js/script.js"></script>
 </body>
 
 </html>
